--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/anasujai/Proyecto-Platzigram#readme",
   "dependencies": {
     "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "materialize-css": "^0.100.2"
   }
 }
